--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-<body>
-Hello world
-</body>
+  <body>
+    <h1>Chris Tetreault - CSE 163</h1>
+    <hr>
+    <ul>
+      <li><a href="pa1.html">PA1: Image and Signal Processing</a>
+    </ul>
+  </body>
 </html>
