Basic skeleton set up
(I am not a web dev)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <hr>
     <ul>
       <li><a href="pa1.html">PA1: Image and Signal Processing</a>
+      <li><a href="pa2.html">PA2: Mesh Simplification and Progressive Meshes</a></li>
+      <li><a href="pa3.html">PA3: Final Project</a></li>
     </ul>
   </body>
 </html>
